@@ -1,5 +1,10 @@
 2009-03-12	Jannis Pohlmann <jannis@xfce.org>
 
+	* libxfce4menu/xfce-menu-monitor.h, libxfce4menu/libxfce4menu.c:
+	  Something is wrong with the API docs. Another try to fix them.
+
+2009-03-12	Jannis Pohlmann <jannis@xfce.org>
+
 	* libxfce4menu/xfce-menu-monitor.h, libxfce4menu/xfce-menu.c: Try to
 	  fix broken API docs syntax and add docs for the
 	  XfceMenuMonitorVTable members.
